test/samples/invalid/assert_for1.invalid.sol
contract Foo {
	function main(uint n) public {
		uint sum = 0;
		for (/** #assert true; */ uint i = 0; i < n; i++) {
			sum += i;
		}
	}
}
